--- a/index.html
+++ b/index.html
@@ -1,14 +1,4 @@
 <!DOCTYPE html>
-<html lang="en" >
-<head>
-  <meta charset="UTF-8">
-  <title>CodePen - A Pen by Mark Twain</title>
-  <link rel="stylesheet" href="./style.css">
-
-</head>
-<body>
-<!-- partial:index.partial.html -->
-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -22,6 +12,7 @@
         <header>
             <h1>Budgeting Tool</h1>
             <button class="reset-btn" onclick="resetLocalStorage()">Reset Data</button>
+            <button class="dark-mode-btn" onclick="toggleDarkMode()">Toggle Dark Mode</button>
         </header>
         <main>
             <div class="form-container" id="step1">
@@ -153,10 +144,5 @@
 
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
-</body>
-</html>
-<!-- partial -->
-  <script  src="./script.js"></script>
-
 </body>
 </html>
