--- a/settings.html
+++ b/settings.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="modal-footer">
                     <a class="go-back" href="#"><img src="img/bck.png"/>Go back</a>
-                    <button type="button" class="primary-btn" onclick="updateIncome()">Save</button>
+                    <button type="button" class="primary-btn" onclick="updateIncome()">Add income</button>
                 </div>
                 
             </form>
