--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style2.css">
+     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     
     <!-- Required meta tags for iOS web app -->
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -29,72 +30,174 @@
      <div class="main-container">
         <div class="chart-container-new">
             <canvas id="myChart"></canvas>
+           <div class="arroww">
+            <img id="cavnav" src="img/nav.png"/>
+           </div>
+          <div class="rwrt">
+            <span class="left_label"><span id="bills_dt">70.44</span>% <br> bills</span>
+            <span class="right_label" id=""><span id="savings_dt">29.56</span>% <br> Savings</span>
+          </div>
         </div>
-        <div class="box">
-            <div class="box1">
-                <div class="img-container">
-                    <img src="img/cal.svg"/>
+       
+        <div>
+            <a href="#" class="addbill">Adding your first bill</a>
+            <h2>Current Pay Cycle</h2>
+            <p>Tue 13th Aug - Fri 26th Aug 2024</p>
+
+            <!-- ---  -->
+            <div class="box">
+                <div class="box1">
+                    <div class="img-container">
+                        <img src="img/cal.svg"/>
+                    </div>
+                    <div class="title-container">
+                        <h3>Frequency</h3>
+                        <span>How Frequently you get paid</span>
+                    </div>
+                    <div class="cycle">
+                        <h2 id="incomeFrequency">Fortnightly</h2>
+                    </div>
                 </div>
-                <div class="title-container">
-                    <h3>Frequency</h3>
-                    <span>How Frequently you get paid</span>
-                </div>
-                <div class="cycle">
-                    <h2 id="incomeFrequency">Fortnightly</h2>
-                </div>
-            </div>
-            <div class="box1">
-                <div class="img-container">
-                    <img style="opacity: 0;" src="img/cal.svg"/>
-                </div>
-                <div class="title-container">
-                    <h3>Income</h3>
-                    <span>How much you get paid</span>
-                </div>
-                <div class="cycle">
-                    <span id="incomeAmount" class="price-data">$ 4674.92</span>
-                </div>
-            </div>
-        </div>
-        <div class="box">
-            <div class="box1">
-                <div class="img-container">
-                    <img src="img/bill.svg"/>
-                </div>
-                <div class="title-container">
-                    <h3>Yr. Income</h3>
-                    <span>Total pay over 12 months</span>
-                </div>
-                <div class="cycle">
-                    <span id="yearlyIncomeAmount" class="price-data">$ 121,547.92</span>
+                <div class="box1">
+                    <div class="img-container">
+                        <img style="opacity: 0;" src="img/cal.svg"/>
+                    </div>
+                    <div class="title-container">
+                        <h3>Income</h3>
+                        <span>How much you get paid</span>
+                    </div>
+                    <div class="cycle">
+                        <span id="incomeAmount" class="price-data">$ 4674.92</span>
+                    </div>
                 </div>
             </div>
-            <div class="box1">
-                <div class="img-container">
-                    <img src="img/bills.svg"/>
+            <div class="box">
+                <div class="box1">
+                    <div class="img-container">
+                        <img src="img/bill.svg"/>
+                    </div>
+                    <div class="title-container">
+                        <h3>Yr. Income</h3>
+                        <span>Total pay over 12 months</span>
+                    </div>
+                    <div class="cycle">
+                        <span id="yearlyIncomeAmount" class="price-data">$ 121,547.92</span>
+                    </div>
                 </div>
-                <div class="title-container">
-                    <h3>Yr. Bills</h3>
-                    <span>Total bills over 12 months</span>
+                <div class="box1">
+                    <div class="img-container">
+                        <img src="img/bills.svg"/>
+                    </div>
+                    <div class="title-container">
+                        <h3>Yr. Bills</h3>
+                        <span>Total bills over 12 months</span>
+                    </div>
+                    <div class="cycle">
+                        <span id="yearlyBillsAmount" class="price-data price-danger">-$ 85,622.04</span>
+                    </div>
                 </div>
-                <div class="cycle">
-                    <span id="yearlyBillsAmount" class="price-data price-danger">-$ 85,622.04</span>
+                <div class="box1">
+                    <div class="img-container">
+                        <img src="img/savings.svg"/>
+                    </div>
+                    <div class="title-container">
+                        <h3>Yr. Savings</h3>
+                        <span>Total savings over 12 months</span>
+                    </div>
+                    <div class="cycle">
+                        <span id="yearlySavingsAmount" class="price-data price-success">$ 35,925.88</span>
+                    </div>
                 </div>
             </div>
-            <div class="box1">
-                <div class="img-container">
-                    <img src="img/savings.svg"/>
+            <!-- ---  -->
+            <div class="billsx">
+                <div class="bills-header">
+                    <span>Bills list</span>
+                    <button class="hide-button">Hide</button>
                 </div>
-                <div class="title-container">
-                    <h3>Yr. Savings</h3>
-                    <span>Total savings over 12 months</span>
-                </div>
-                <div class="cycle">
-                    <span id="yearlySavingsAmount" class="price-data price-success">$ 35,925.88</span>
-                </div>
+                <table class="bills-table" id="billtbl">
+                   <tbody></tbody>
+                </table>
             </div>
         </div>
      </div>
+    </div>
+
+    <div id="billModal" class="modal">
+        <div class="modal-content">
+            <span class="close" onclick="closeModal()">&times;</span>
+            <form id="billsForm">
+                <input type="hidden" id="billIndex" name="billIndex">
+                <div class="form-group">
+                    <label for="billName">Bill Name:</label>
+                    <input type="text" id="billName" name="billName" required>
+                </div>
+                <div class="form-group">
+                    <label for="billAmount">Bill Amount:</label>
+                    <input type="number" step="0.01" id="billAmount" name="billAmount" required>
+                </div>
+                <div class="form-group">
+                    <label for="billFrequency">Bill Frequency:</label>
+                    <select id="billFrequency" name="billFrequency" required>
+                        <option value="weekly">Weekly</option>
+                        <option value="fortnightly">Fortnightly</option>
+                        <option value="monthly">Monthly</option>
+                        <option value="quarterly">Quarterly</option>
+                        <option value="yearly">Yearly</option>
+                        <option value="one-off">One-off</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="billDate">Next Due Date:</label>
+                    <input type="date" id="billDate" name="billDate" required>
+                </div>
+                <div class="form-group">
+                    <label for="billTag">Tag:</label>
+                    <input type="text" id="billTag" name="billTag" list="tagList">
+                    <datalist id="tagList"></datalist>
+                </div>
+                <div class="modal-footer">
+                    <a class="go-back" href="#"><img src="img/bck.png"/>Go back</a>
+                    <button type="submit" id="submitBill" class="primary-btn">Add a Bill</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div id="incomeModal" class="modal">
+        <div class="modal-content">
+            <h1>Budgeting Tool</h1>
+            <form id="incomeEditForm">
+                <div class="form-group">
+                    <label for="editFrequency">How often do you get paid?</label>
+                    <select id="editFrequency" name="editFrequency" required>
+                        <option value="weekly">Weekly</option>
+                        <option value="fortnightly">Fortnightly</option>
+                        <option value="monthly">Monthly</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="editIncome">How much do you get paid in that period?</label>
+                    <input type="number" step="0.01" id="editIncome" name="editIncome" required>
+                </div>
+                <div class="form-group">
+                    <label for="editPayday">When is your next pay day?</label>
+                    <input type="date" id="editPayday" name="editPayday" required>
+                </div>
+                <button style="float: right;margin: 10px  0;" type="button" class="primary-btn" onclick="updateIncome()">Next Step</button>
+                <div class="bottom-step">
+                    <input type="file" id="importFile" style="display:none;" onchange="importData(event)">
+                    <a href="#" onclick="document.getElementById('importFile').click()">
+                        <span class="menu-icon">
+                            <img src="img/exp.png"/>
+                        </span>
+                        <span class="menu-txt">
+                            Import data
+                        </span>
+                    </a>
+                </div>
+            </form>
+        </div>
     </div>
 
     <div class="bottom-menu-bar">
@@ -122,5 +225,16 @@
    
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="script.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script>
+        jQuery('.addbill').click(function(){
+            jQuery('#billModal').show();
+            return false;
+        });
+        jQuery('a.go-back').click(function(){
+            jQuery(this).parent().parent().parent().parent().hide();
+            return false;
+        });
+    </script>
 </body>
 </html>
