--- a/index.html
+++ b/index.html
@@ -39,10 +39,8 @@
           </div>
         </div>
        
-        <div>
-            <a href="#" class="addbill">Adding your first bill</a>
-            <h2>Current Pay Cycle</h2>
-            <p>Tue 13th Aug - Fri 26th Aug 2024</p>
+        <div style=" padding-bottom: 5rem; ">
+          
 
             <!-- ---  -->
             <div class="box">
@@ -109,16 +107,15 @@
                     </div>
                 </div>
             </div>
-            <!-- ---  -->
-            <div class="billsx">
-                <div class="bills-header">
-                    <span>Bills list</span>
-                    <button class="hide-button">Hide</button>
+
+            <a href="#" class="addbill">Adding your first bill</a>
+            <h2>Current Pay Cycle</h2>
+            <p>Tue 13th Aug - Fri 26th Aug 2024</p>
+
+            <!-- --->
+            <!-- ---  income-->
+            <div id="accordionContainer2">
                 </div>
-                <table class="bills-table" id="billtbl">
-                   <tbody></tbody>
-                </table>
-            </div>
         </div>
      </div>
     </div>
