--- a/settings.html
+++ b/settings.html
@@ -98,8 +98,13 @@
                 <label for="newTagName">New Tag Name:</label>
                 <input type="text" id="newTagName" name="newTagName">
             </div>
+            <div class="modal-footer">
+                <div>
+                <a class="go-back" href="#"><img src="img/bck.png"/>Go back</a>
             <button class="primary-btn" onclick="renameTag()">Rename Tag</button>
             <button class="delete-btn" onclick="deleteTag()">Delete Tag</button>
+        </div>
+            </div>
         </div>
     </div>
 
